Add title slide

--- a/index.html
+++ b/index.html
@@ -10,6 +10,25 @@
   <link rel="stylesheet" href="theme/screen-16x10.css">
 </head>
 <body class="shower list">
+  <header class="caption">
+    <h1>Open Webslides</h1>
+    <h2>Internship 2018</h2>
+    <p>
+      <a href="https://www.linkedin.com/in/jasperdhaene/">Jasper D'haene</a> &amp;
+      <a href="https://florian.dejonckhee.re/">Florian Dejonckheere</a>,
+      <a href="http://www.hogent.be/">Hogeschool Gent</a>
+    </p>
+  </header>
+
+  <section class="black title slide" id="title">
+    <h2>Open Webslides</h2>
+    <p>
+      <a href="https://www.linkedin.com/in/jasperdhaene/">Jasper D'haene</a>
+      &amp;
+      <a href="https://florian.dejonckhee.re/">Florian Dejonckheere</a>
+    </p>
+  </section>
+
   <script src="https://cdnjs.cloudflare.com/ajax/libs/shower-core/2.1.0/shower.min.js"></script>
 </body>
 </html>
