Update slides for sprint 4 meeting

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>Internship at Open Webslides</title>
+  <title>Open Webslides</title>
 
   <meta charset="utf-8">
   <meta http-equiv="x-ua-compatible" content="ie=edge">
@@ -12,97 +12,49 @@
 <body class="shower list">
   <header class="caption">
     <h2>Open Webslides</h2>
-    <h2>Internship 2018</h2>
-    <p>
-      <a href="https://www.linkedin.com/in/jasperdhaene/">Jasper D'haene</a> &amp;
-      <a href="https://florian.dejonckhee.re/">Florian Dejonckheere</a>,
-      <a href="http://www.hogent.be/">Hogeschool Gent</a>
-    </p>
+    <p>Sprint 4</p>
   </header>
 
   <section class="black title slide" id="title">
     <h2>Open Webslides</h2>
-    <p>
-      <a href="https://www.linkedin.com/in/jasperdhaene/">Jasper D'haene</a>
-      &amp;
-      <a href="https://florian.dejonckhee.re/">Florian Dejonckheere</a>
-    </p>
+    <p>Sprint 3</p>
   </section>
 
   <section class="slide" id="sprints">
     <h2>Overview</h2>
 
     <ul>
-      <li>3 sprints completed</li>
-      <li>3 sprints remaining</li>
+      <li>4 sprints completed</li>
+      <li>2 sprints remaining</li>
     </ul>
+
+    <p>Internship goal: working platform, basic editor</p>
   </section>
 
-  <section class="slide" id="roadmap">
-    <h2>Roadmap</h2>
-
-    <p>End of internship: finished product</p>
+  <section class="slide" id="finished">
+    <h2>Finished</h2>
 
     <ul>
-      <li>Base platform: sign in, sign up, create, delete topics</li>
-      <li>Topic editor</li>
-    </ul>
-  </section>
-
-  <section class="slide" id="jasper-finished-assignments">
-    <h2>Jasper: finished assignments</h2>
-
-    <ul>
-      <li>Social feed/recent activity</li>
-      <li>Library</li>
-      <li>Profile</li>
-      <li>Branding</li>
-    </ul>
-  </section>
-
-  <section class="slide" id="florian-finished-assignments">
-    <h2>Florian: finished assignments</h2>
-
-    <ul>
-      <li>API server</li>
-      <li>CoCOS project</li>
-      <li>Authentication</li>
-      <li>Deployment and maintenance</li>
-    </ul>
-  </section>
-
-  <section class="slide" id="pain-points">
-    <h2>Pain points</h2>
-
-    <ul>
-      <li>Long integration cycles</li>
-      <li>Slow development</li>
-    </ul>
-  </section>
-
-  <section class="slide" id="future">
-    <h2>Future sprint</h2>
-
-    <ul>
-      <li>API coupling</li>
-      <li>Demo instance</li>
-      <li>Content rendering</li>
+      <li>
+        API coupling, demo instance
+        <ul>
+          <li><a href="http://owsdev.ugent.be/">http://owsdev.ugent.be/</a></li>
+        </ul>
+      </li>
       <li>Platform branding</li>
+      <li>Authentication: sign in, sign up</li>
     </ul>
+
+    <p>Slow editor development</p>
   </section>
 
-  <section class="slide" id="practical">
-    <h2>Practical</h2>
+  <section class="slide">
+    <h2>Sprint 5</h2>
 
     <ul>
-      <li>Final presentation: date, location, audience</li>
-      <li>Third internship visit: date</li>
-      <li>Internship report: template, contents</li>
+      <li>Persistence of topics</li>
+      <li>Functional editor</li>
     </ul>
-  </section>
-
-  <section class="black title slide" id="demo">
-    <h2>Questions</h2>
   </section>
 
   <div class="progress"></div>
