--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
   <section class="black title slide" id="title">
     <h2>Open Webslides</h2>
-    <p>Sprint 3</p>
+    <p>Sprint 4</p>
   </section>
 
   <section class="slide" id="sprints">
@@ -41,12 +41,101 @@
           <li><a href="http://owsdev.ugent.be/">http://owsdev.ugent.be/</a></li>
         </ul>
       </li>
+			<li>Delete topic: confirmation modal</li>
       <li>Platform branding</li>
       <li>Authentication: sign in, sign up</li>
     </ul>
 
     <p>Slow editor development</p>
   </section>
+
+	<section class="slide" id="branding-homepage">
+		<h2>Homepage</h2>
+
+		<img src="assets/pages/homepage_old.png" alt="home_old" width="545" height="190" >
+		<img src="assets/pages/homepage.png" alt="home" width="545" height="190" >
+	</section>
+
+	<section class="slide" id="branding-library">
+		<h2>Library</h2>
+
+		<img src="assets/pages/lib_old.png" alt="home_old" width="545" height="231" >
+		<img src="assets/pages/lib.png" alt="home" width="545" height="231" >
+	</section>
+
+	<section class="slide" id="branding-signin">
+		<h2>Sign in</h2>
+
+		<img src="assets/pages/login.png" alt="login" width="682" height="279" >
+	</section>
+
+	<section class="slide" id="branding-profile">
+		<h2>Profile</h2>
+
+		<img src="assets/pages/profile.png" alt="no" width="682" height="396">
+	</section>
+
+	<section class="black title slide" id="proposed-style-changes">
+		<h2>Possible style changes</h2>
+		<ul>
+			<li>Feed: feed-items</li>
+			<li>Library: secondary button style</li>
+		</ul>
+	</section>
+
+	<section class="slide" id="branding-prop-feed-now">
+		<h2>Feed </h2>
+
+		<img src="assets/pages/homepage.png" alt="home" width="683" height="238" >
+	</section>
+
+	<section class="slide" id="branding-prop-feed1">
+		<h2>Feed 1: extra margin</h2>
+
+		<img src="assets/pages/alt/feed/social_styling_margin.png" alt="no" width="682" height="428">
+	</section>
+
+	<section class="slide" id="branding-prop-feed2">
+		<h2>Feed 2: card </h2>
+
+		<img src="assets/pages/alt/feed/social_styling_card_shadow.png" alt="no" width="682" height="428">
+	</section>
+
+	<section class="slide" id="branding-prop-feed3">
+		<h2>Feed 3: rounded cards</h2>
+
+		<img src="assets/pages/alt/feed/social_styling_rounded_card_shadow.png" alt="no" width="682" height="428">
+	</section>
+
+	<section class="slide" id="branding-prop-feed4">
+		<h2>Feed 4: background colour</h2>
+
+		<img src="assets/pages/alt/feed/social_styling_no_shadow.png" alt="no" width="682" height="428">
+	</section>
+
+	<section class="slide" id="branding-prop-feed5">
+		<h2>Feed 5: link colour</h2>
+
+		<img src="assets/pages/alt/feed/social_styling_topic_link_color.png" alt="no" width="682" height="428">
+	</section>
+
+	<section class="slide" id="branding-prop-lib-now">
+		<h2>Library </h2>
+
+		<img src="assets/pages/lib.png" alt="home" width="683" height="238" >
+	</section>
+
+	<section class="slide" id="branding-prop-lib1">
+		<h2>Library 1: link underline</h2>
+
+		<img src="assets/pages/alt/lib/lib_styling_secondary_button.png" alt="no" width="682" height="428">
+	</section>
+
+	<section class="slide" id="branding-prop-lib2">
+		<h2>Library 2: button</h2>
+
+		<img src="assets/pages/alt/lib/lib_styling_secondary_button_alt.png" alt="no" width="682" height="428">
+	</section>
 
   <section class="slide">
     <h2>Sprint 5</h2>
