title slides for branding + sprint 5

--- a/index.html
+++ b/index.html
@@ -49,6 +49,11 @@
     <p>Slow editor development</p>
   </section>
 
+	<section class="black title slide" id="branding">
+		<h2>Branding</h2>
+		<p>Comparison of before and after images</p>
+	</section>
+
 	<section class="slide" id="branding-homepage">
 		<h2>Homepage</h2>
 
@@ -135,6 +140,10 @@
 		<h2>Library 2: button</h2>
 
 		<img src="assets/pages/alt/lib/lib_styling_secondary_button_alt.png" alt="no" width="682" height="428">
+	</section>
+
+	<section class="black title slide" id="sprint5">
+		<h2>Sprint 5</h2>
 	</section>
 
   <section class="slide">
