Clean up slides

--- a/index.html
+++ b/index.html
@@ -11,13 +11,24 @@
 </head>
 <body class="shower list">
   <header class="caption">
-    <h2>Open Webslides</h2>
-    <p>Thesis</p>
+    <h1>Open Webslides</h1>
+    <h2>Internship presentation</h2>
+
+    <p>
+      <a href="https://florian.dejonckhee.re/">Florian Dejonckheere</a>
+      &amp;
+      <a href="http://users.hogent.be/jasperdhaene/">Jasper D'haene</a>,
+      <a href="https://www.hogent.be">Hogeschool Gent</a>
+    </p>
   </header>
 
   <section class="black title slide" id="title">
     <h2>Open Webslides</h2>
-    <p>Thesis</p>
+    <p>
+      <a href="https://florian.dejonckhee.re/">Florian Dejonckheere</a>
+      &amp;
+      <a href="http://users.hogent.be/jasperdhaene/">Jasper D'haene</a>
+    </p>
   </section>
 
 
@@ -25,7 +36,7 @@
     <h2>Course content of the future</h2>
     <ul>
       <li>Slides built using modern <strong>webtechnologies</strong>
-        <ul>Integration of <strong>multimedia</strong></ul>
+        <ul>Integration of <strong>multimedia</strong> and <strong>web</strong></ul>
         <ul><strong>Linking</strong> to <a href="https://rubenverborgh.github.io/WebFundamentals/architecture/#url-http-html">other courses</a></ul>
         <ul>Webslides work on <strong>every device</strong></ul>
       </li>
@@ -284,6 +295,7 @@
 
   <section class="slide" id="platform">
     <h2>Open Webslides platform</h2>
+
     <ul>
       <li>Open source platform to create <strong>course content</strong></li>
       <li>Enables <strong>collaboration</strong> and <strong>co-creation</strong></li>
@@ -296,19 +308,17 @@
     </ul>
   </section>
 
-  <section class="slide" id="issue">
-    <h2>Thesis topic</h2>
+
+  <section class="slide" id="roadmap">
+    <h2>Roadmap</h2>
     <ul>
-      <li><strong>Recent Activity</strong> feed similar to Facebook, Twitter, ...</li>
-      <li>Currently modeled in <strong>relational database</strong></li>
+      <li><strong>Now</strong>: content editor and basic platform</li>
+      <li><strong></strong></li>
     </ul>
   </section>
 
-  <section class="slide" id="thesis">
-    <h2>Thesis topic</h2>
-    <blockquote style="color: black;">
-      Analysis and Design of an Efficient NoSQL Data Storage Schema for an Interlinked Recent Activity Feed
-    </blockquote>
+  <section class="slide black title" id="questions">
+    <h2>Questions?</h2>
   </section>
 
   <div class="progress"></div>
