--- a/index.html
+++ b/index.html
@@ -320,15 +320,20 @@
     </svg>
   </section>
 
-  <section class="slide" id="platform">
-    <h2>Open Webslides platform</h2>
+  <section class="slide" id="content">
+    <h2>Content</h2>
 
     <ul>
-      <li>Open source platform to create <strong>course content</strong></li>
-      <li>Focus on <strong>content</strong> rather than appearance</li>
       <li>
-        Easily export courses in various <strong>formats</strong>
-        <ul>Slides, hand-outs, full text course, ...</ul>
+        Uncouple <strong>content</strong> from <strong>appearance</strong>
+        <ul>
+          <li>Easily export courses in various <strong>formats</strong><br/>
+            Slides, hand-outs, full text course, ...
+          </li>
+          <li><strong>Annotations</strong> linked to content</li>
+        </ul>
+      </li>
+      <li><strong>Version controlled</strong> content</li>
     </ul>
   </section>
 
@@ -352,7 +357,8 @@
         <strong>Now</strong>: content editor and basic platform
         <ul>Creation of courses</ul>
       </li>
-      <li><strong>Summer/fall 2018</strong>: Co-creation on webslides</li>
+      <li><strong>Summer 2018</strong>: finishing course editor</li>
+      <li><strong>Fall 2018</strong>: Co-creation on webslides</li>
     </ul>
   </section>
 
