intro and outro slide

--- a/index.html
+++ b/index.html
@@ -31,6 +31,12 @@
     </p>
   </section>
 
+  <section class="black title slide" id="intro">
+    <h2>Introduction</h2>
+    <p>
+      <a href="https://www.linkedin.com/in/estherdeloof/">Esther De Loof</a>
+    </p>
+  </section>
 
   <section class="slide" id="course-content">
     <h2>Course content of the future</h2>
@@ -414,6 +420,13 @@
     <h2>Questions?</h2>
   </section>
 
+  <section class="black title slide" id="outro">
+    <h2>A little extra</h2>
+    <p>
+      <a href="https://www.linkedin.com/in/anneleenwytynck/">Anneleen Wytynck</a>
+    </p>
+  </section>
+  
   <div class="progress"></div>
   <footer class="badge">
     <a href="https://github.com/floriandejonckheere/internship-slides">Fork me on GitHub</a>
