my image slides

--- a/index.html
+++ b/index.html
@@ -38,6 +38,22 @@
     </p>
   </section>
 
+  <section class="slide" id="im1">
+    <img src="https://nieuws.medialaancdn.be/sites/nieuws.vtm.be/files/styles/larger/public/article/image/2018/03/universiteit_gent.jpg?itok=hagjgTaF" alt="[tools picture]" width="800" height="450">
+  </section>
+  
+  <section class="slide" id="im2">
+    <img src="http://ichef.bbci.co.uk/wwfeatures/wm/live/1280_640/images/live/p0/2v/dp/p02vdpfn.jpg" alt="[tools picture]" width="800" height="400">
+  </section>
+  
+  <section class="slide" id="im3">
+    <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/7/72/OHP-sch.JPG/1200px-OHP-sch.JPG" alt="[tools picture]" width="800" height="500">
+  </section>
+  
+  <section class="slide" id="im4">
+    <img src="https://www1.wdr.de/radio/wdr5/studentenineinervorlesung100~_v-gseapremiumxl.jpg" alt="[tools picture]" width="800" height="400">
+  </section>
+  
   <section class="slide" id="course-content">
     <h2>Course content of the future</h2>
     <ul>
