slides for Anneleen

--- a/index.html
+++ b/index.html
@@ -54,6 +54,15 @@
     <img src="https://www1.wdr.de/radio/wdr5/studentenineinervorlesung100~_v-gseapremiumxl.jpg" alt="[tools picture]" width="800" height="400">
   </section>
   
+  <section class="black title slide" id="title">
+    <h2>Internship presentation</h2>
+    <p>
+      <a href="https://florian.dejonckhee.re/">Florian Dejonckheere</a>
+      &amp;
+      <a href="http://users.hogent.be/jasperdhaene/">Jasper D'haene</a>
+    </p>
+  </section>
+  
   <section class="slide" id="course-content">
     <h2>Course content of the future</h2>
     <ul>
@@ -447,6 +456,24 @@
     <p>
       <a href="https://www.linkedin.com/in/anneleenwytynck/">Anneleen Wytynck</a>
     </p>
+  </section>
+  
+  <section class="slide" id="ASS">
+    <h2>Webtech for autism</h2>
+    <ul>
+      <li>What is an autism spectrum disorder (ASD)?</li>
+      <li>What learning obstacles do people with ASD experience?</li>
+	  <ul>
+		<li>Clear composition of course materials</li>
+		<li>Information overload</li>
+		<li>Process information more locally</li>
+	  </ul>
+	  <li>What can webslides do to help?</li>
+    </ul>
+  </section>
+  
+  <section class="slide black title" id="demo">
+    <h2>Demo</h2>
   </section>
   
   <div class="progress"></div>
