Move slides about co-creation approach to the front

--- a/index.html
+++ b/index.html
@@ -27,6 +27,39 @@
     </p>
   </section>
 
+  <section class="slide" id="traditional-approach">
+    <h2>Traditional approach</h2>
+    <p>Usually a <strong>one-way</strong> street</p>
+    <ul>
+      <li>In the classroom: student listens to teacher</li>
+      <li>At home: student learns from course material (provided by the teacher)</li>
+    </ul>
+  </section>
+
+  <section class="slide" id="co-creation">
+    <h2>Co-creation approach</h2>
+    <p>Co-creation makes it a <strong>two-way</strong> street</p>
+    <ul>
+      <li>In the classroom: engage students with interactive content</li>
+      <li>At home: stimulate students to actively contribute to the course material</li>
+    </ul>
+  </section>
+
+  <section class="slide" id="types-of-co-creation">
+    <h2>Teacher-student co-creation</h2>
+
+    <p>Provide <strong>opportunity</strong> for students to</p>
+    <ul>
+      <li>
+        <strong>Correct</strong> and <strong>improve</strong> existing content
+        <ul>
+          <li>Typos as a low threshold for co-creation</li>
+        </ul>
+      </li>
+      <li><strong>Expand</strong> content with new examples, definitions, ...</li>
+    </ul>
+  </section>
+
   <section class="slide" id="course-content">
     <h2>Course content of the future</h2>
     <ul>
@@ -189,25 +222,6 @@
     <h2>MolView: 3D molecule viewer</h2>
     <!-- Was: http://molview.org/ -->
     <iframe width="800" height="450" src="https://ows.florian.dejonckhee.re/"></iframe>
-  </section>
-
-  <section class="slide" id="way-of-learning">
-    <h2>Way of learning for student</h2>
-    <p>Usually a <strong>one-way street</strong></p>
-    <ul>
-      <li>In the classroom: student listens to teacher</li>
-      <li>Outside the classroom: student learns from course material (provided by the teacher)</li>
-    </ul>
-  </section>
-
-  <section class="slide" id="co-creation">
-    <h2>Co-creation makes learning a two-way street</h2>
-    <p>Three types of co-creation:</p>
-    <ul>
-      <li>Teacher-teacher</li>
-      <li>Teacher-student</li>
-      <li>Student-student</li>
-    </ul>
   </section>
 
   <section class="slide" id="use-case-2">
