Equalize slide padding

--- a/index.html
+++ b/index.html
@@ -388,7 +388,7 @@
     <!-- What Open Webslides will implement in the short term future -->
   </section>
 
-  <section class="slide" id="platform" style="padding: 0;">
+  <section class="slide">
     <p  style="text-align: center;">
       <img src="assets/qr.png" alt="https://openwebslid.es/" style="width: 40%; "/>
 
