--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
   <meta http-equiv="x-ua-compatible" content="ie=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 
+  <link href="https://fonts.googleapis.com/css?family=Libre+Baskerville" rel="stylesheet">
+
   <link rel="stylesheet" href="theme/screen-16x10.css">
 </head>
 <body class="shower list">
@@ -27,53 +29,20 @@
     </p>
   </section>
 
-  <section class="slide" id="traditional-approach">
-    <h2>Traditional approach</h2>
-    <p>Usually a <strong>one-way</strong> street</p>
-    <ul>
-      <li>In the classroom: student listens to teacher</li>
-      <li>At home: student learns from course material (provided by the teacher)</li>
-    </ul>
-  </section>
-
-  <section class="slide" id="co-creation">
-    <h2>Co-creation approach</h2>
-    <p>Co-creation makes it a <strong>two-way</strong> street</p>
-    <ul>
-      <li>In the classroom: engage students with interactive content</li>
-      <li>At home: stimulate students to actively contribute to the course material</li>
-    </ul>
-  </section>
-
-  <section class="slide" id="types-of-co-creation">
-    <h2>Teacher-student co-creation</h2>
-
-    <p>Provide <strong>opportunity</strong> for students to</p>
-    <ul>
-      <li>
-        <strong>Correct</strong> and <strong>improve</strong> existing content
-        <ul>
-          <li>Typos as a low threshold for co-creation</li>
-        </ul>
-      </li>
-      <li><strong>Expand</strong> content with new examples, definitions, ...</li>
-    </ul>
-  </section>
-
   <section class="slide" id="course-content">
     <h2>Course content of the future</h2>
     <ul>
       <li>Slides and courses built using modern <strong>webtechnologies</strong>
         <ul>Integration of <strong>multimedia</strong> and <strong>web</strong></ul>
         <ul><strong>Linking</strong> to <a href="https://rubenverborgh.github.io/WebFundamentals/architecture/#url-http-html">other courses</a></ul>
-        <ul>Webslides work on <strong>every device</strong></ul>
+        <ul>Webslides work on almost <strong>every device</strong></ul>
       </li>
       <li>Extra <strong>visibility</strong> by putting slides on the Web</li>
     </ul>
   </section>
 
   <section class="slide" id="webslides">
-    <h2>Slides with the power of websites</h2>
+    <h2>Courses with the power of websites</h2>
     <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="860" height="410">
       <style>
         #webslides path,
@@ -138,8 +107,8 @@
         <g>
           <g>
             <rect x="283.67" y="94.68" fill="#FFFFFF" width="312.43" height="196.02" />
-            <g class="next">
-              <rect x="343.38" y="114.55" fill="#FFD200" width="251.72" height="16.77" />
+            <g>
+              <rect x="343.38" y="114.55" fill="#1E64C8" width="251.72" height="16.77" />
               <rect x="284.67" y="114.55" fill="#1E64C8" width="29.88" height="16.77" />
               <g>
                 <rect x="320.15" y="129.79" fill="#1E64C8" width="19.1" height="0.81" />
@@ -162,7 +131,7 @@
           <rect x="366.62" y="216.03" fill="#D9D9D9" width="40.8" height="13.95" />
           <rect x="309.61" y="186.52" fill="#D9D9D9" width="97.81" height="13.95" />
           <rect x="309.61" y="250.2" fill="#D9D9D9" width="97.81" height="13.95" />
-          <g class="next">
+          <g>
             <rect x="422.65" y="186" width="150.71" height="78" />
             <g class="play">
               <path style="fill: #BD1622; stroke: none" d="M521.58,230.57c0,6.25-4.58,11.31-10.22,11.31h-26.71c-5.64,0-10.22-5.06-10.22-11.31v-10.28
@@ -170,14 +139,14 @@
               <polygon style="fill: white" points="493.35,218.76 503.64,224.71 493.35,230.65" />
             </g>
           </g>
-          <g class="next">
+          <g>
             <rect x="309.61" y="215.76" fill="#1D70B7" width="48.91" height="14.47" />
             <rect x="309.61" y="233.76" fill="#1D70B7" stroke="#1D70B7" width="48.91" height="2.11" />
           </g>
         </g>
       </g>
 
-      <g class="next">
+      <g>
         <g>
           <path d="M170.24,153.31c18.36,32.37,92.12,80.13,142.1,81.51" />
           <polygon points="162.26,159.16 166.04,139.58 181.11,152.64" />
@@ -196,7 +165,7 @@
         <image width="860" height="400" xlink:href="assets/webslides-papers.svg" />
       </g>
 
-      <g class="next">
+      <g>
         <image width="860" height="400" xlink:href="assets/webslides-coursesEN.svg" />
         <g>
           <path d="M88.12,375.12c155.52,12.32,257.8-9.84,280.23-41.62" />
@@ -204,7 +173,7 @@
         </g>
       </g>
 
-      <g class="next">
+      <g>
         <image width="860" height="400" xlink:href="assets/webslides-tweets.svg" />
         <g>
           <path d="M528.16,330.87c41.91,54.99,220.18,2.8,238.53-139.67" />
@@ -212,7 +181,7 @@
         </g>
       </g>
 
-      <g class="next">
+      <g>
         <text x="282" y="313" style="font: 20px Arial;" fill="#1D70B7">www.ugent.be/slides/innoversity#24</text>
       </g>
     </svg>
@@ -224,8 +193,73 @@
     <iframe width="800" height="450" src="https://ows.florian.dejonckhee.re/"></iframe>
   </section>
 
+  <section class="slide" id="traditional-approach">
+    <h2>Traditional approach</h2>
+    <p>Usually a <strong>one-way</strong> street</p>
+    <ul>
+      <li>In the classroom: student listens to teacher</li>
+      <li>At home: student learns from course material (provided by the teacher)</li>
+    </ul>
+  </section>
+
+  <section class="slide" id="co-creation">
+    <h2>Co-creation approach</h2>
+    <p>Co-creation makes it a <strong>two-way</strong> street</p>
+    <ul>
+      <li>In the classroom: engage students with interactive content</li>
+      <li>At home: stimulate students to actively contribute to the course material</li>
+    </ul>
+  </section>
+
+  <section class="slide" id="types-of-co-creation">
+    <h2>Teacher-student co-creation</h2>
+
+    <p>Provide <strong>opportunity</strong> for students to</p>
+    <ul>
+      <li>
+        <strong>Correct</strong> and <strong>improve</strong> existing content
+        <ul>
+          <li>Typos as a low threshold for co-creation</li>
+        </ul>
+      </li>
+      <li><strong>Expand</strong> content with new examples, definitions, ...</li>
+    </ul>
+  </section>
+
+  <section class="slide" id="open-webslides">
+    <div style="text-align: center; font-size: 3em; line-height: 2em; font-family: Libre Baskerville, serif;">
+      o&middot;pen web&middot;slides
+    </div>
+
+    <p>
+    <div style="color: grey;">Noun</div>
+    The use of open <strong>technologies</strong> to publish open <strong>content</strong> on the Web, in order to start an open <strong>dialogue</strong> with peers and contributors.
+    </p>
+  </section>
+
+  <section class="black title slide" id="exercise-signin">
+    <h2>Exercise</h2>
+
+    <ul>
+      <li>Create an Open Webslides account</li>
+    </ul>
+
+    <div style="text-align: center; margin-top: 10rem;">
+      <h2><a href="https://openwebslid.es/" target="_blank">https://openwebslid.es/</a></h2>
+    </div>
+  </section>
+
+  <section class="black title slide" id="exercise-topic">
+    <h2>Exercise</h2>
+
+    <ul>
+      <li>Create a topic</li>
+      <li>Write some content</li>
+    </ul>
+  </section>
+
   <section class="slide" id="use-case-2">
-    <h2>Use case 1: improvements to course material</h2>
+    <h2>Use case: improvements to course material</h2>
     <p>Course material is not always flawless:</p>
     <ul>
       <li>Typos</li>
@@ -251,11 +285,11 @@
   <section class="slide" id="feedback-problems">
     <h2>Integrating feedback could be easier</h2>
 
-    <p>Now, it has a lot of <strong>administrative overhead</strong></p>
+    <p>Lots of administrative <strong>overhead</strong></p>
     <ul>
-      <li>Author's version might differ from student's</li>
-      <li>Changes need to be made across multiple formats</li>
-      <li>Students need updated version</li>
+      <li>Author's <strong>version</strong> might differ from student's</li>
+      <li>Changes need to be made across multiple <strong>formats</strong></li>
+      <li>Students need <strong>updated version</strong></li>
     </ul>
   </section>
 
@@ -263,8 +297,8 @@
     <h2>Co-creation via Open Webslides</h2>
     <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="930" height="440">
       <g>
-        <line fill="none" stroke="#FFD200" stroke-width="12" stroke-miterlimit="10" x1="3.67" y1="200" x2="832.17" y2="200" />
-        <polygon fill="#FFD200" points="826.91,217.85 858,199.9 826.91,181.95         " />
+        <line fill="none" stroke="#d60b52" stroke-width="12" stroke-miterlimit="10" x1="3.67" y1="200" x2="832.17" y2="200" />
+        <polygon fill="#d60b52" points="826.91,217.85 858,199.9 826.91,181.95         " />
       </g>
 
       <g>
@@ -272,7 +306,7 @@
         <image width="860" height="400" xlink:href="assets/open-source-publicatieEN.svg" />
       </g>
 
-      <g class="next">
+      <g>
         <g>
           <path fill="none" stroke="#1E64C8" stroke-width="4" stroke-miterlimit="10" d="M179.07,236.84c20.97-37.32,73.58-84.39,97.96-99.23"
           />
@@ -326,7 +360,7 @@
         }
       </style>
 
-      <g class="next" id="acceptatie">
+      <g id="acceptatie">
         <g>
           <path fill="none" stroke="#1E64C8" stroke-width="4" stroke-miterlimit="10" d="M478.26,77.41
           c28.2,29.99,58.32,115.81,66.25,149.8" />
@@ -346,7 +380,7 @@
         />
       </g>
 
-      <g class="next" id="update">
+      <g id="update">
         <g>
           <path fill="none" stroke="#1E64C8" stroke-width="4" stroke-miterlimit="10" d="M593,328.18c16.86-5.35,41.35-15.77,73.25-58.63"
           />
@@ -359,8 +393,24 @@
     </svg>
   </section>
 
+  <section class="slide" id="open-audience-new">
+    <h2>Integrating feedback in Open Webslides</h2>
+    <blockquote>
+      <h3>List of suggestions</h3>
+      <p>
+        Suggestion from John<br>
+        <em><del>Indirect</del> <ins>Direct</ins> effects of climate change are listed below.</em>
+      </p>
+      <p>
+        <a href="#open-feedback-new">view slide</a> –
+        <a href="#open-feedback-new">accept</a> –
+        <a href="#open-feedback-new">reject</a>
+      </p>
+    </blockquote>
+  </section>
+
   <section class="slide" id="content">
-    <h2>Content</h2>
+    <h2>Format vs content</h2>
 
     <ul>
       <li>
@@ -376,6 +426,19 @@
     </ul>
   </section>
 
+  <section class="slide" id="open-publication">
+    <h2>Content can easily be public</h2>
+    <ul>
+      <li>The <strong>author</strong> determines who can see the slides:
+        <ul>
+          <li>e.g. only <strong>university students</strong> through university login
+          <li>Everyone, just like a typical website</li>
+        </ul>
+      </li>
+      <li>Be careful with <strong>intellectual property</strong> rights.</li>
+    </ul>
+  </section>
+
   <section class="slide" id="development">
     <h2>State of the Art</h2>
 
@@ -386,16 +449,6 @@
     <h2>Future</h2>
 
     <!-- What Open Webslides will implement in the short term future -->
-  </section>
-
-  <section class="slide">
-    <p  style="text-align: center;">
-      <img src="assets/qr.png" alt="https://openwebslid.es/" style="width: 40%; "/>
-
-      <div style="text-align: center;">
-        <h2><a href="https://openwebslid.es/">https://openwebslid.es/</a></h2>
-      </div>
-    </p>
   </section>
 
   <section class="slide black title" id="questions">
