--- a/index.html
+++ b/index.html
@@ -237,6 +237,10 @@
     </p>
   </section>
 
+  <section class="black title slide" id="demo-signin">
+    <h2>Demo: Open Webslides platform</h2>
+  </section>
+
   <section class="black title slide" id="exercise-signin">
     <h2>Exercise</h2>
 
@@ -253,8 +257,9 @@
     <h2>Exercise</h2>
 
     <ul>
-      <li>Create a topic</li>
-      <li>Write some content</li>
+      <li>Create a topic about dinosaurs</li>
+      <li>Write some text about the types of dinosaurs you know</li>
+      <li>Leave in some typos!</li>
     </ul>
   </section>
 
@@ -280,17 +285,6 @@
 
       <p>John</p>
     </blockquote>
-  </section>
-
-  <section class="slide" id="feedback-problems">
-    <h2>Integrating feedback could be easier</h2>
-
-    <p>Lots of administrative <strong>overhead</strong></p>
-    <ul>
-      <li>Author's <strong>version</strong> might differ from student's</li>
-      <li>Changes need to be made across multiple <strong>formats</strong></li>
-      <li>Students need <strong>updated version</strong></li>
-    </ul>
   </section>
 
   <section class="slide" id="open-source">
@@ -409,6 +403,31 @@
     </blockquote>
   </section>
 
+  <section class="slide" id="feedback-problems">
+    <h2>Integrating feedback could be easier</h2>
+
+    <p>Lots of administrative <strong>overhead</strong></p>
+    <ul>
+      <li>Author's <strong>version</strong> might differ from student's</li>
+      <li>Changes need to be made across multiple <strong>formats</strong></li>
+      <li>Students need <strong>updated version</strong></li>
+    </ul>
+  </section>
+
+  <section class="black title slide" id="demo-cocreation">
+    <h2>Demo: co-creation flow in Open Webslides</h2>
+  </section>
+
+  <section class="black title slide" id="exercise-cocreation">
+    <h2>Exercise</h2>
+
+    <ul>
+      <li>Pair up with one or two people</li>
+      <li>One person acts like the teacher, the others like students</li>
+      <li>The students correct the typos left in the course</li>
+    </ul>
+  </section>
+
   <section class="slide" id="content">
     <h2>Format vs content</h2>
 
@@ -440,19 +459,41 @@
   </section>
 
   <section class="slide" id="development">
-    <h2>State of the Art</h2>
+    <h2>What's possible at the moment</h2>
 
-    <!-- What Open Webslides implements now -->
+    <ul>
+      <li>Writing text courses</li>
+      <li><strong>Sharing</strong> your courses with your students</li>
+      <li>Restricting your course only to students</li>
+      <li>Allowing your students to <strong>contribute</strong></li>
+    </ul>
   </section>
 
   <section class="slide" id="future">
-    <h2>Future</h2>
+    <h2>What will you be able to do soon</h2>
 
-    <!-- What Open Webslides will implement in the short term future -->
+    <ul>
+      <li>Adding images, videos and <strong>interactive content</strong></li>
+      <li>Generating slides from your course (you know, webslides)</li>
+      <li>Content annotations as a way to interact with your students</li>
+    </ul>
   </section>
 
   <section class="slide black title" id="questions">
     <h2>Questions?</h2>
+  </section>
+
+  <section class="slide black title" id="markdown">
+    <h2>Markdown cheatsheet</h2>
+
+    <ul>
+      <li><span style="font-weight: bold;">bold text</span>: **bold text**</li>
+      <li><span style="font-style: italic;">italic text</span>: _italic text</li>
+      <li><span style="font-family: monospace;">code text</span>: `code text`</li>
+      </li>
+      <li><a href="#">link</a>: [link](http://example.com) </li>
+      <li>&mdash; list item</li>
+    </ul>
   </section>
 
   <div class="progress"></div>
