Move slides around a bit

--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
   </header>
 
   <section class="black title slide" id="title">
-    <h2>Open Webslides</h2>
+    <h2 style="font-size: 4em;">Open Webslides</h2>
     <p>
-      <a href="https://florian.dejonckhee.re/">Florian Dejonckheere</a>
+      <a href="https://florian.dejonckhee.re/">Florian Dejonckheere</a>, Ghent University
     </p>
   </section>
 
@@ -193,6 +193,62 @@
     <iframe width="800" height="450" src="https://ows.florian.dejonckhee.re/"></iframe>
   </section>
 
+  <section class="slide" id="content">
+    <h2>Format vs content</h2>
+
+    <ul>
+      <li>
+        Uncouple <strong>content</strong> from <strong>appearance</strong>
+        <ul>
+          <li>Easily export courses in various <strong>formats</strong><br/>
+            Slides, hand-outs, full text course, ...
+          </li>
+          <li><strong>Annotations</strong> linked to content</li>
+        </ul>
+      </li>
+      <li><strong>Version controlled</strong> content</li>
+    </ul>
+  </section>
+
+  <section class="slide" id="open-publication">
+    <h2>Content can easily be public</h2>
+    <ul>
+      <li>The <strong>author</strong> determines who can see the slides:
+        <ul>
+          <li>e.g. only <strong>university students</strong> through university login
+          <li>Everyone, just like a typical website</li>
+        </ul>
+      </li>
+      <li>Be careful with <strong>intellectual property</strong> rights.</li>
+    </ul>
+  </section>
+
+  <section class="black title slide" id="demo-signin">
+    <h2>Demo: Open Webslides platform</h2>
+  </section>
+
+  <section class="black title slide" id="exercise-signin">
+    <h2>Exercise</h2>
+
+    <ul>
+      <li>Create an Open Webslides account</li>
+    </ul>
+
+    <div style="text-align: center; margin-top: 10rem;">
+      <h2><a href="https://openwebslid.es/" target="_blank">https://openwebslid.es/</a></h2>
+    </div>
+  </section>
+
+  <section class="black title slide" id="exercise-topic">
+    <h2>Exercise</h2>
+
+    <ul>
+      <li>Create a topic about dinosaurs</li>
+      <li>Write something about your favourite dinosaur</li>
+      <li>Leave in some typos!</li>
+    </ul>
+  </section>
+
   <section class="slide" id="traditional-approach">
     <h2>Traditional approach</h2>
     <p>Usually a <strong>one-way</strong> street</p>
@@ -208,6 +264,16 @@
     <ul>
       <li>In the classroom: engage students with interactive content</li>
       <li>At home: stimulate students to actively contribute to the course material</li>
+    </ul>
+  </section>
+
+  <section class="slide" id="use-case-2">
+    <h2>Improvements to course material</h2>
+    <p>Course material is not always flawless:</p>
+    <ul>
+      <li>Typos</li>
+      <li>Mistakes: grammatical or logical</li>
+      <li>Improvements</li>
     </ul>
   </section>
 
@@ -235,42 +301,6 @@
     <div style="color: grey;">Noun</div>
     The use of open <strong>technologies</strong> to publish open <strong>content</strong> on the Web, in order to start an open <strong>dialogue</strong> with peers and contributors.
     </p>
-  </section>
-
-  <section class="black title slide" id="demo-signin">
-    <h2>Demo: Open Webslides platform</h2>
-  </section>
-
-  <section class="black title slide" id="exercise-signin">
-    <h2>Exercise</h2>
-
-    <ul>
-      <li>Create an Open Webslides account</li>
-    </ul>
-
-    <div style="text-align: center; margin-top: 10rem;">
-      <h2><a href="https://openwebslid.es/" target="_blank">https://openwebslid.es/</a></h2>
-    </div>
-  </section>
-
-  <section class="black title slide" id="exercise-topic">
-    <h2>Exercise</h2>
-
-    <ul>
-      <li>Create a topic about dinosaurs</li>
-      <li>Write some text about the types of dinosaurs you know</li>
-      <li>Leave in some typos!</li>
-    </ul>
-  </section>
-
-  <section class="slide" id="use-case-2">
-    <h2>Use case: improvements to course material</h2>
-    <p>Course material is not always flawless:</p>
-    <ul>
-      <li>Typos</li>
-      <li>Mistakes: grammatical or logical</li>
-      <li>Improvements</li>
-    </ul>
   </section>
 
   <section class="slide" id="feedback">
@@ -425,36 +455,6 @@
       <li>Pair up with one or two people</li>
       <li>One person acts like the teacher, the others like students</li>
       <li>The students correct the typos left in the course</li>
-    </ul>
-  </section>
-
-  <section class="slide" id="content">
-    <h2>Format vs content</h2>
-
-    <ul>
-      <li>
-        Uncouple <strong>content</strong> from <strong>appearance</strong>
-        <ul>
-          <li>Easily export courses in various <strong>formats</strong><br/>
-            Slides, hand-outs, full text course, ...
-          </li>
-          <li><strong>Annotations</strong> linked to content</li>
-        </ul>
-      </li>
-      <li><strong>Version controlled</strong> content</li>
-    </ul>
-  </section>
-
-  <section class="slide" id="open-publication">
-    <h2>Content can easily be public</h2>
-    <ul>
-      <li>The <strong>author</strong> determines who can see the slides:
-        <ul>
-          <li>e.g. only <strong>university students</strong> through university login
-          <li>Everyone, just like a typical website</li>
-        </ul>
-      </li>
-      <li>Be careful with <strong>intellectual property</strong> rights.</li>
     </ul>
   </section>
 
