Add slides about current capabilities and limitations

--- a/index.html
+++ b/index.html
@@ -227,8 +227,8 @@
     <h2>Demo: Open Webslides platform</h2>
   </section>
 
-  <section class="black title slide" id="exercise-signin">
-    <h2>Exercise</h2>
+  <section class="black title slide" id="hands-on-signin">
+    <h2>Hands-on</h2>
 
     <ul>
       <li>Create an Open Webslides account</li>
@@ -239,8 +239,8 @@
     </div>
   </section>
 
-  <section class="black title slide" id="exercise-topic">
-    <h2>Exercise</h2>
+  <section class="black title slide" id="hands-on-topic">
+    <h2>Hands-on</h2>
 
     <ul>
       <li>Create a topic about dinosaurs</li>
@@ -267,16 +267,6 @@
     </ul>
   </section>
 
-  <section class="slide" id="use-case-2">
-    <h2>Improvements to course material</h2>
-    <p>Course material is not always flawless:</p>
-    <ul>
-      <li>Typos</li>
-      <li>Mistakes: grammatical or logical</li>
-      <li>Improvements</li>
-    </ul>
-  </section>
-
   <section class="slide" id="types-of-co-creation">
     <h2>Teacher-student co-creation</h2>
 
@@ -292,19 +282,18 @@
     </ul>
   </section>
 
-  <section class="slide" id="open-webslides">
-    <div style="text-align: center; font-size: 3em; line-height: 2em; font-family: Libre Baskerville, serif;">
-      o&middot;pen web&middot;slides
-    </div>
-
-    <p>
-    <div style="color: grey;">Noun</div>
-    The use of open <strong>technologies</strong> to publish open <strong>content</strong> on the Web, in order to start an open <strong>dialogue</strong> with peers and contributors.
-    </p>
+  <section class="slide" id="use-case-2">
+    <h2>Improvements to course material</h2>
+    <p>Course material is not always flawless:</p>
+    <ul>
+      <li>Typos</li>
+      <li>Mistakes: grammatical or logical</li>
+      <li>Improvements</li>
+    </ul>
   </section>
 
   <section class="slide" id="feedback">
-    <h2>Integrate feedback from students</h2>
+    <h2>Use case: integrate feedback from students</h2>
 
     <blockquote>
       <p>Dear professor,</p>
@@ -315,6 +304,28 @@
 
       <p>John</p>
     </blockquote>
+  </section>
+
+  <section class="slide" id="feedback-problems">
+    <h2>Integrating feedback could be easier</h2>
+
+    <p>Lots of administrative <strong>overhead</strong></p>
+    <ul>
+      <li>Author's <strong>version</strong> might differ from student's</li>
+      <li>Changes need to be made across multiple <strong>formats</strong></li>
+      <li>Students need <strong>updated version</strong></li>
+    </ul>
+  </section>
+
+  <section class="slide" id="open-webslides">
+    <div style="text-align: center; font-size: 3em; line-height: 2em; font-family: Libre Baskerville, serif;">
+      o&middot;pen web&middot;slides
+    </div>
+
+    <p>
+    <div style="color: grey;">Noun</div>
+    The use of open <strong>technologies</strong> to publish open <strong>content</strong> on the Web, in order to start an open <strong>dialogue</strong> with peers and contributors.
+    </p>
   </section>
 
   <section class="slide" id="open-source">
@@ -433,17 +444,6 @@
     </blockquote>
   </section>
 
-  <section class="slide" id="feedback-problems">
-    <h2>Integrating feedback could be easier</h2>
-
-    <p>Lots of administrative <strong>overhead</strong></p>
-    <ul>
-      <li>Author's <strong>version</strong> might differ from student's</li>
-      <li>Changes need to be made across multiple <strong>formats</strong></li>
-      <li>Students need <strong>updated version</strong></li>
-    </ul>
-  </section>
-
   <section class="black title slide" id="demo-cocreation">
     <h2>Demo: co-creation flow in Open Webslides</h2>
   </section>
@@ -458,24 +458,48 @@
     </ul>
   </section>
 
-  <section class="slide" id="development">
-    <h2>What's possible at the moment</h2>
+  <section class="slide" id="interactive-content">
+    <h2>What's possible now?</h2>
 
     <ul>
-      <li>Writing text courses</li>
-      <li><strong>Sharing</strong> your courses with your students</li>
-      <li>Restricting your course only to students</li>
-      <li>Allowing your students to <strong>contribute</strong></li>
+      <li>Writing <strong>textual</strong> courses</li>
+      <li><strong>Linking</strong> to other courses</li>
+    </ul>
+
+    <h2>What will be possible soon?</h2>
+
+    <ul>
+      <li>Writing courses with images, video and <strong>interactive tools</strong></li>
     </ul>
   </section>
 
-  <section class="slide" id="future">
-    <h2>What will you be able to do soon</h2>
+  <section class="slide" id="sharing-course">
+    <h2>What's possible now?</h2>
 
     <ul>
-      <li>Adding images, videos and <strong>interactive content</strong></li>
-      <li>Generating slides from your course (you know, webslides)</li>
-      <li>Content annotations as a way to interact with your students</li>
+      <li><strong>Sharing</strong> your course with your students, other institutions and the world wide web</li>
+      <li>Anyone can <strong>contribute</strong> corrections and enhancements</li>
+    </ul>
+
+    <h2>What will be possible soon?</h2>
+
+    <ul>
+      <li>Transparently reviewing students' contributions</li>
+    </ul>
+  </section>
+
+  <section class="slide" id="formats">
+    <h2>What's possible now?</h2>
+
+    <ul>
+      <li>Viewing the course as a <strong>full text course</strong></li>
+    </ul>
+
+    <h2>What will be possible soon?</h2>
+
+    <ul>
+      <li>Extracting <strong>slides</strong> and handouts</li>
+      <li>Allowing students to add public <strong>annotations</strong> to the course material</li>
     </ul>
   </section>
 
