Update markdown cheatsheet

--- a/index.html
+++ b/index.html
@@ -510,14 +510,23 @@
   <section class="slide black title" id="markdown">
     <h2>Markdown cheatsheet</h2>
 
-    <ul>
-      <li><span style="font-weight: bold;">bold text</span>: **bold text**</li>
-      <li><span style="font-style: italic;">italic text</span>: _italic text</li>
-      <li><span style="font-family: monospace;">code text</span>: `code text`</li>
-      </li>
-      <li><a href="#">link</a>: [link](http://example.com) </li>
-      <li>&mdash; list item</li>
-    </ul>
+    <table>
+      <tr>
+        <td><span style="font-weight: bold;">bold text</span></td><td>**bold text**</td>
+      </tr>
+      <tr>
+        <td><span style="font-style: italic;">italic text</span></td><td>_italic text_</td>
+      </tr>
+      <tr>
+        <td><span style="font-family: monospace;">code text</span></td><td>`code text`</td>
+      </tr>
+      <tr>
+        <td>&mdash; list item</td>
+      </tr>
+      <tr>
+        <td><a href="#">link</a></td><td>[link](http://example.com)</td>
+      </tr>
+    </table>
   </section>
 
   <div class="progress"></div>
