Change institutional link

--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
     <h2>CoCOS Workshop 2019</h2>
 
     <p>
-      <a href="https://florian.dejonckhee.re/">Florian Dejonckheere</a>,
-      <a href="https://www.hogent.be">Ghent University</a>
+      <a href="https://florian.dejonckhee.re/" target="_blank">Florian Dejonckheere</a>,
+      <a href="https://www.ugent.be/" target="_blank">Ghent University</a>
     </p>
   </header>
 
