--- a/index.html
+++ b/index.html
@@ -10,8 +10,17 @@
   <link href="https://fonts.googleapis.com/css?family=Libre+Baskerville" rel="stylesheet">
 
   <link rel="stylesheet" href="theme/screen-16x10.css">
+
+  <style>
+    a { color: #851b5e; }
+    strong { font-weight: bold; }
+  </style>
 </head>
 <body class="shower list">
+  <div style="position: fixed; bottom: 0; width: 100%; text-align: center; z-index: 999;">
+    <strong><a href="https://www.menti.com/64de736c">www.menti.com</a></strong> with code <strong>52 60 72</strong>
+  </div>
+
   <header class="caption">
     <h1>Open Webslides</h1>
     <h2>CoCOS Workshop 2019</h2>
@@ -27,6 +36,14 @@
     <p>
       <a href="https://florian.dejonckhee.re/">Florian Dejonckheere</a>, Ghent University
     </p>
+  </section>
+
+  <section class="slide" id="mentimeter">
+    <h2>If you have questions or feedback...</h2>
+
+    <div style="position: absolute; left: 0;">
+      <img src="assets/mentimeter.png" alt="Mentimeter" style="width: 100%;" />
+    </div>
   </section>
 
   <section class="slide" id="course-content">
@@ -503,8 +520,12 @@
     </ul>
   </section>
 
-  <section class="slide black title" id="questions">
+  <section class="slide" id="questions">
     <h2>Questions?</h2>
+
+    <div style='position: absolute; top: 0; left: 0; height: calc(100% - .4em); width: 100%;'>
+      <iframe allowfullscreen='true' allowtransparency='true' frameborder='0' height='315' src='https://www.mentimeter.com/embed/0f5ea436af287f9480a9ae82439d23d9/1c1885c6b0c4' style='position: absolute; top: 0; left: 0; width: 100%; height: 100%;' width='420'></iframe>
+    </div>
   </section>
 
   <section class="slide black title" id="markdown">
