--- a/index.html
+++ b/index.html
@@ -245,7 +245,7 @@
   </section>
 
   <section class="black title slide" id="hands-on-signin">
-    <h2>Hands-on</h2>
+    <h2>Hands-on exercise</h2>
 
     <ul>
       <li>Create an Open Webslides account</li>
@@ -257,7 +257,7 @@
   </section>
 
   <section class="black title slide" id="hands-on-topic">
-    <h2>Hands-on</h2>
+    <h2>Hands-on exercise</h2>
 
     <ul>
       <li>Create a topic about dinosaurs</li>
@@ -358,7 +358,7 @@
         <image width="860" height="400" xlink:href="assets/open-source-publicatieEN.svg" />
       </g>
 
-      <g>
+      <g class="next">
         <g>
           <path fill="none" stroke="#1E64C8" stroke-width="4" stroke-miterlimit="10" d="M179.07,236.84c20.97-37.32,73.58-84.39,97.96-99.23"
           />
@@ -412,7 +412,7 @@
         }
       </style>
 
-      <g id="acceptatie">
+      <g class="next" id="acceptatie">
         <g>
           <path fill="none" stroke="#1E64C8" stroke-width="4" stroke-miterlimit="10" d="M478.26,77.41
           c28.2,29.99,58.32,115.81,66.25,149.8" />
@@ -432,7 +432,7 @@
         />
       </g>
 
-      <g id="update">
+      <g class="next" id="update">
         <g>
           <path fill="none" stroke="#1E64C8" stroke-width="4" stroke-miterlimit="10" d="M593,328.18c16.86-5.35,41.35-15.77,73.25-58.63"
           />
@@ -466,7 +466,7 @@
   </section>
 
   <section class="black title slide" id="exercise-cocreation">
-    <h2>Exercise</h2>
+    <h2>Hands-on exercise</h2>
 
     <ul>
       <li>Pair up with one or two people</li>
