--- a/index.html
+++ b/index.html
@@ -542,6 +542,9 @@
         <td><span style="font-family: monospace;">code text</span></td><td>`code text`</td>
       </tr>
       <tr>
+        <td><span style="text-decoration: strikethrough;">strikethrough</span></td><td>~~strikethrough~~</td>
+      </tr>
+      <tr>
         <td><h2>heading</h2></td><td># heading</td>
       </tr>
       <tr>
