Add escaped text to markdown cheatsheet

--- a/index.html
+++ b/index.html
@@ -529,27 +529,25 @@
   </section>
 
   <section class="slide black title" id="markdown">
+    <h2>Markdown cheatsheet</h2>
     <table>
       <tr>
         <td><span style="font-weight: bold;">bold text</span></td><td>**bold text**</td>
-      </tr>
-      <tr>
-        <td><span style="font-style: italic;">italic text</span></td><td>_italic text_</td>
-      </tr>
-      <tr>
         <td><span style="font-family: monospace;">code text</span></td><td>`code text`</td>
       </tr>
       <tr>
+        <td><span style="font-style: italic;">italic text</span></td><td>_italic text_</td>
         <td><span style="text-decoration: strikethrough;">strikethrough</span></td><td>~~strikethrough~~</td>
       </tr>
       <tr>
         <td><h2>heading</h2></td><td># heading</td>
-      </tr>
-      <tr>
         <td>&mdash; list item</td>
       </tr>
       <tr>
         <td><a href="#">link</a></td><td>[link](http://example.com)</td>
+      </tr>
+      <tr>
+        <td>! " # $ % & ' ( ) * + ,</td><td>\! \" \# \$ \% \& \' \( \) \* \+ \,</td>
       </tr>
     </table>
   </section>
