Split markdown cheatsheet into two slides

--- a/index.html
+++ b/index.html
@@ -528,19 +528,31 @@
     </div>
   </section>
 
-  <section class="slide black title" id="markdown">
-    <h2>Markdown cheatsheet</h2>
+  <section class="slide black title" id="markdown-1">
+    <h2>Markdown cheatsheet (1)</h2>
     <table>
       <tr>
         <td><span style="font-weight: bold;">bold text</span></td><td>**bold text**</td>
-        <td><span style="font-family: monospace;">code text</span></td><td>`code text`</td>
       </tr>
       <tr>
         <td><span style="font-style: italic;">italic text</span></td><td>_italic text_</td>
-        <td><span style="text-decoration: strikethrough;">strikethrough</span></td><td>~~strikethrough~~</td>
       </tr>
       <tr>
+        <td><span style="font-family: monospace;">code text</span></td><td>`code text`</td>
+      </tr>
+      <tr>
+        <td><del>strikethrough</del></td><td>~~strikethrough~~</td>
+      </tr>
+    </table>
+  </section>
+
+  <section class="slide black title" id="markdown-2">
+    <h2>Markdown cheatsheet (2)</h2>
+    <table>
+      <tr>
         <td><h2>heading</h2></td><td># heading</td>
+      </tr>
+      <tr>
         <td>&mdash; list item</td>
       </tr>
       <tr>
